WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60007
REGRESSION (
r83122
): CSS !important not respected by JavaScript
https://bugs.webkit.org/show_bug.cgi?id=60007
Summary
REGRESSION (r83122): CSS !important not respected by JavaScript
Ian Henderson
Reported
2011-05-02 20:38:11 PDT
An element with a !important property in its style will allow you to override this property in JavaScript without using !important. Caused by <
http://trac.webkit.org/changeset/83122
>.
Attachments
proposed patch
(4.24 KB, patch)
2011-05-02 20:47 PDT
,
Ian Henderson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ian Henderson
Comment 1
2011-05-02 20:38:27 PDT
<
rdar://problem/9299919
>
mitz
Comment 2
2011-05-02 20:46:39 PDT
<
rdar://problem/9299919
>
Ian Henderson
Comment 3
2011-05-02 20:47:31 PDT
Created
attachment 92042
[details]
proposed patch
WebKit Commit Bot
Comment 4
2011-05-02 22:08:02 PDT
Comment on
attachment 92042
[details]
proposed patch Clearing flags on attachment: 92042 Committed
r85585
: <
http://trac.webkit.org/changeset/85585
>
WebKit Commit Bot
Comment 5
2011-05-02 22:08:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug